added cards and attached them to navbar links

--- a/index.html
+++ b/index.html
@@ -37,6 +37,37 @@
           </nav>
     </header>
 
+    
+    <article>
+
+        <div class="card" style="width:18rem;" id="work-card">
+            <div class="card-body">
+                <h5 class="card-title">title here</h5>
+                <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
+                <p class="card-text">short descrip here</p>
+                <a href="#" class="card-link">link to project here</a>
+            </div>
+        </div>
+
+        <div class="card" style="width:18rem;" id="about-card">
+            <div class="card-body">
+                <h5 class="card-title">title here</h5>
+                <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
+                <p class="card-text">short descrip here</p>
+                <a href="#" class="card-link">link to project here</a>
+            </div>
+        </div>
+
+        <div class="card" style="width:18rem;" id="contact-card">
+            <div class="card-body">
+                <h5 class="card-title">title here</h5>
+                <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
+                <p class="card-text">short descrip here</p>
+                <a href="#" class="card-link">link to project here</a>
+            </div>
+        </div>
+
+    </article>
 
     <footer>
 
