created a responsive, reversed, centered hero with an image of myself and placeholder text

--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
               </div>
             </div>
           </nav>
+
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img class="d-block mx-lg-auto img-fluid" src="assets/img/HEK_2024.jpg" alt="Image of Nathan Steinway" loading="lazy" width="700" height="500">
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="display-5 fw-bold 1h-1 mb-3 text-white">lorem ipsum blah blah blah</h1>
+                    <p class="lead text-light">
+                        shiner is just OK
+                    </p>
+                </div>
+            </div>
+        </div>
     </header>
 
     
