managed to properly center cards on desktop

--- a/index.html
+++ b/index.html
@@ -49,36 +49,42 @@
                 </div>
             </div>
         </div>
+
     </header>
 
     
-    <article>
+    <article class="container col-xxl-8 px-4 py-5">
 
-        <div class="card" style="width:18rem;" id="work-card">
-            <div class="card-body">
-                <h5 class="card-title">title here</h5>
-                <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
-                <p class="card-text">short descrip here</p>
-                <a href="#" class="card-link">link to project here</a>
-            </div>
-        </div>
+        <div class="row flex-lg-row justify-content-center g-5 py-5">
 
-        <div class="card" style="width:18rem;" id="about-card">
-            <div class="card-body">
-                <h5 class="card-title">title here</h5>
-                <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
-                <p class="card-text">short descrip here</p>
-                <a href="#" class="card-link">link to project here</a>
+            <div class="card" style="width:18rem;" id="work-card">
+                <div class="card-body">
+                    <h5 class="card-title">title here</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
+                    <p class="card-text">short descrip here</p>
+                    <a href="#" class="card-link">link to project here</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card" style="width:18rem;" id="contact-card">
-            <div class="card-body">
-                <h5 class="card-title">title here</h5>
-                <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
-                <p class="card-text">short descrip here</p>
-                <a href="#" class="card-link">link to project here</a>
+            <div class="card" style="width:18rem;" id="about-card">
+                <div class="card-body">
+                    <h5 class="card-title">title here</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
+                    <p class="card-text">short descrip here</p>
+                    <a href="#" class="card-link">link to project here</a>
+                </div>
             </div>
+
+            <div class="card" style="width:18rem;" id="contact-card">
+                <div class="card-body">
+                    <h5 class="card-title">title here</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
+                    <p class="card-text">short descrip here</p>
+                    <a href="#" class="card-link">link to project here</a>
+                </div>
+
+            </div>
+            
         </div>
 
     </article>
