pulled from readme on github

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#about-card">About Me</a>
+                    <a class="nav-link active" aria-current="page" href="#work-card">My Work</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#work-card">My Work</a>
+                    <a class="nav-link" href="#about-card">About Me</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contact-card">Contact Me</a>
@@ -42,9 +42,9 @@
                     <img class="d-block mx-lg-auto img-fluid" src="assets/img/HEK_2024.jpg" alt="Image of Nathan Steinway" loading="lazy" width="700" height="500">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold 1h-1 mb-3 text-white">lorem ipsum blah blah blah</h1>
+                    <h1 class="display-5 fw-bold 1h-1 mb-3 text-white">Dedicated to Being Better Every Day</h1>
                     <p class="lead text-light">
-                        shiner is just OK
+                        Currently pursuing full-stack web development at Southern Methodist University in Dallas, TX.
                     </p>
                 </div>
             </div>
@@ -59,27 +59,26 @@
 
             <div class="card" style="width:18rem;" id="work-card">
                 <div class="card-body">
-                    <h5 class="card-title">title here</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
-                    <p class="card-text">short descrip here</p>
+                    <h5 class="card-title">My Projects</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Take a look at my progress!</h6>
+                    <p class="card-text">These are my projects from SMU.</p>
                     <a href="#" class="card-link">link to project here</a>
                 </div>
             </div>
 
             <div class="card" style="width:18rem;" id="about-card">
                 <div class="card-body">
-                    <h5 class="card-title">title here</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
-                    <p class="card-text">short descrip here</p>
+                    <h5 class="card-title">About Me</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">I've got a lot going on.</h6>
+                    <p class="card-text">Take a look below!</p>
                     <a href="#" class="card-link">link to project here</a>
                 </div>
             </div>
 
             <div class="card" style="width:18rem;" id="contact-card">
                 <div class="card-body">
-                    <h5 class="card-title">title here</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle here</h6>
-                    <p class="card-text">short descrip here</p>
+                    <h5 class="card-title">Contact Me</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Below are the best ways to contact me.</h6>
                     <a href="#" class="card-link">link to project here</a>
                 </div>
 
