added about and contact sections complete with links to github and email clients respectively

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Nathan Steinway</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
                     <a class="nav-link active" aria-current="page" href="#work-card">My Work</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#about-card">About Me</a>
+                    <a class="nav-link" href="#about-section">About Me</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contact-card">Contact Me</a>
+                    <a class="nav-link" href="#contact-section">Contact Me</a>
                   </li>
                 </ul>
               </div>
@@ -133,7 +133,58 @@
 
     </section>
 
-    <section class="container col-xxl-8 px-4 py-5" id="about-card">
+    <section class="container col-xxl-8 px-4 py-5 text-light" id="about-section">
+        
+        <h2 class="text-center">
+            ABOUT ME
+        </h2>
+
+        <h3>
+            MY MISSION: Develop foundational skills that are essential to success as a web developer
+        </h3>
+
+        <h3>
+            MY MOTIVATION: To explore a new avenue in life
+        </h3>
+
+        <h3>
+            MY PASSION: Create, Learn, Improve
+        </h3>
+    </section>
+
+    <section class="container col-xxl-8 px-4 py-5 text-light text-center" id="contact-section">
+
+        <h2>
+            CONTACT ME
+        </h2>
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-sm">
+
+                    <a href="https://github.com/NathanSteinway" target="_blank">
+                        <img src="./assets/img/GitHub-Mark-120px-plus.png" alt="Img of Github Mark" class="img-thumbnail pull-left">
+                    </a>
+
+                    <p>My Github</p>
+
+                </div>
+
+                <div class="col-sm">
+
+                    <a href = "mailto: steinway.nathan@gmail.com">
+                        <img src="./assets/img/GitHub-Mark-120px-plus.png" alt="Img of Github Mark" class="img-thumbnail pull-left">
+                    </a>
+
+                    <p>My Email</p>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </section>
 
